<resources>
    <string name="app_name">Hybrid BLO Register</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_change_password"></string>
    <string name="image_ref">image</string>
    <string name="title_activity_no_network"></string>
    <string name="title_activity_welcome_blo"></string>
    <string name="title_activity_field_visit"></string>
    <string name="title_activity_blo_report"></string>
    <string name="title_activity_new_voter">NewVoter</string>
    <string name="title_activity_voter_full_detail">VoterFullDetail</string>
    <string name="title_activity_welcome_blonew">WelcomeBLONew</string>
    <string name="title_activity_overseas_voter">OverseasVoter</string>
    <string name="title_activity_possible_pooling_station">PossiblePoolingStation</string>
    <string name="title_activity_post_office_gpslocation">PostOfficeGPSLocation</string>
    <string name="title_activity_left_over_voter">LeftOverVoter</string>
    <string name="title_activity_to_be_qualified">ToBeQualified</string>
    <string name="title_activity_voter_list_family">VoterListFamily</string>
    <string name="title_activity_existing_polling_station">ExistingPollingStation</string>
    <string name="title_activity_field_visit_dashboard">FieldVisitDashboard</string>
    <string name="title_activity_oversease_show_data">OverseaseShowData</string>
    <string name="title_activity_revision">RevisionActivity</string>
    <string name="title_activity_check_list_verification">CheckListVerificationActivity</string>
    <string name="title_activity_logical_error">LogicalErrorActivity</string>
    <string name="title_activity_dse">DSEActivity</string>
    <string name="title_activity_registered_death">RegisteredDeathActivity</string>
    <string name="title_activity_migration_verify">MigrationVerifyActivity</string>
    <string name="title_activity_blo_register">BloRegisterActivity</string>
    <string name="title_activity_logical_error_list_family">LogicalErrorListFamily</string>
    <string name="title_activity_auxiliary_polling_station">AuxiliaryPollingStation</string>
    <string name="title_activity_police_gpslocation">PoliceGPSLocation</string>
    <string name="title_activity_health_care_centre">HealthCareCentre</string>
    <string name="title_activity_form8">Form8</string>
    <string name="title_activity_form6">Form6</string>
    <string name="title_activity_form6a">Form6a</string>
    <string name="title_activity_form7">Form7</string>
    <string name="title_activity_form8a">Form8a</string>
    <string name="title_activity_dsesub">DSESubActivity</string>
    <string name="title_activity_rationalization">Rationalization</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_blostatements">BLOStatements</string>
    <string name="title_activity_statement10_fill_detail">Statement10FillDetail</string>
    <string name="Please_Wait">Please Wait</string>
    <string name="Nothing_to_show">Nothing to show</string>
    <string name="Please_Enable_GPS">Please Enable GPS</string>
    <string name="Data_not_saved_TRY_AGAIN">Data not saved,TRY AGAIN</string>
    <string name="Polling_station_image_is_not_uploaded">Polling station image is not uploaded</string>
    <string name="Empty_Flat_HouseNo_Floor_Building_is_not_allowed">Empty Flat / House No. / Floor / Building is not allowed</string>
    <string name="Empty_Colony_Street_Locality_is_not_allowed">Empty Colony / Street / Locality is not allowed</string>
    <string name="Empty_City_State_is_not_allowed">Empty City , State is not allowed</string>
    <string name="Invalid_Pincode">Invalid Pincode</string>
    <string name="Select_Building_Type">Select Building Type</string>
    <string name="Select_Priority_Choice">Select Priority Choice</string>
    <string name="Capture_GPS_location">Capture GPS location</string>
    <string name="Go_to_settings_and_enable_permissions">Go to settings and enable permissions</string>
    <string name="No_Response_from_Server">No Response from Server.</string>
    <string name="Welcome">Welcome </string>
    <string name="ERROR_Enter_Total_Population_Count">ERROR: Enter Total Population Count</string>
    <string name="ERROR_Enter_Female_Population_Count">ERROR: Enter Female Population Count</string>
    <string name="ERROR_Enter_Other_Gender_Count">ERROR: Enter Other Gender Count</string>
    <string name="ERROR_Fill_all_detail">ERROR: Fill all detail</string>
    <string name="Empty_Entry">Empty Entry</string>
    <string name="Statement_1">Statement 1</string>
    <string name="Statement_2">Statement 2</string>
    <string name="Statement_3">Statement 3</string>
    <string name="Statement_4">Statement 4</string>
    <string name="Statement_4A">Statement 4 A</string>
    <string name="Statement_5">Statement 5</string>
    <string name="Statement_6">Statement 6</string>
    <string name="Statement_7">Statement 7</string>
    <string name="Statement_8">Statement 8</string>
    <string name="Statement_10">Statement 10</string>
    <string name="Statement_11">Statement 11</string>
    <string name="Statement_12">Statement 12</string>
    <string name="Statement_detail1">SUMMARY OF LAST REVISION OF ELECTORAL ROLLS.</string>
    <string name="Statement_detail2">CONFIRMATION.</string>
    <string name="Statement_detail3">SHIFTED VOTERS.</string>
    <string name="Statement_detail4">ELIGIBILITY FOR FORM-6 IN CURRENT REVISION.</string>
    <string name="Statement_detail4A">LIST OF VOTERS TO BE REGISTERED IN THE NEXT REVISION YEAR.</string>
    <string name="Statement_detail5">PART POPULATION.</string>
    <string name="Statement_detail6">LIST OF VOTERS WHO HAVE EXPIRED</string>
    <string name="Statement_detail7">PHOTO ELECTORAL ROLL</string>
    <string name="Statement_detail8">NEW DEVELOPMENTS IN THE PART.</string>
    <string name="Statement_detail10">ANALYSIS</string>
    <string name="Statement_detail11">SUMMARY OF CURRENT REVISION.</string>
    <string name="Statement_detail12">MAPPING OF GOVT. FUNCTIONARIES RESIDING IN THE PART.</string>
    <string name="Something_Went_Wrong">Something Went Wrong</string>
    <string name="Password_Updated_on_main_server_but_not_on_local_server">Password Updated on main server but not on local server</string>
    <string name="Invalid_UserID_or_Password">Invalid UserID or Password</string>
    <string name="Please_Enter_Old_Password">Please Enter Old Password</string>
    <string name="ERROR_Please_Enter_Old_Password">ERROR: Please Enter Old Password</string>
    <string name="Please_enter_your_new_password">Please enter your new password</string>
    <string name="ERROR_Please_enter_your_new_password">ERROR: Please enter your new password</string>
    <string name="Password_must_be_Min6_and_Max500_Characters">Password must be Min:6 and Max:500 Characters</string>
    <string name="ERROR_Password_must_be_Min6and_Max500_Characters">ERROR: Password must be Min:6 and Max:500 Characters</string>
    <string name="Please_re_enter_your_new_password">Please re-enter your new password</string>
    <string name="ERROR_Please_re_enter_your_new_password">ERROR: Please re-enter your new password</string>
    <string name="Passwords_does_not_match">Passwords does not match</string>
    <string name="ERROR_Passwords_does_not_match">ERROR: Passwords does not match</string>
    <string name="Random_number_for_this_form_is">Random number for this form is: </string>
    <string name="ERROR_Please_enter_Form_Type">ERROR: Please enter Form Type</string>
    <string name="ERROR_Please_Mention_Voter_Epic_number">ERROR: Please Mention Voter Epic number</string>
    <string name="Form_is_not_uploaded">Form is not uploaded</string>
    <string name="Select_Verified_OR_Not_Verified">Select Verified OR Not Verified</string>
    <string name="Data">Data</string>
    <string name="No_Internet_connection">No Internet Connection</string>
    <string name="No_data_to_display">No Data To Display</string>
    <string name="You_are_having">You are having</string>
    <string name="new_work_to_be_done">new work to be done</string>
    <string name="Please_enter_Serial_number_first">Please enter Serial number first</string>
    <string name="Enter_Son_Count">Enter Son (Count)"</string>
    <string name="Enter_Dependent_Daughter_Count">Enter Dependent Daughter (Count)</string>
    <string name="Enter_Married_Daughter_Count">Enter Married Daughter (Count)</string>
    <string name="Click_on_LATE_NA_in_case_wife_serial_number_is_deleted_or_not_available">Click on LATE/NA in case spouse serial number is deleted or not available</string>
    <string name="Click_on_LATE_NA_in_case_husband_serial_number_is_deleted_or_not_available">Click on LATE/NA in case spouse serial number is deleted or not available</string>
    <string name="Either_Click_on_LATE_NA_or_mention_Wife_Serial_number">Either Click on LATE/NA or mention spouse Serial number</string>
    <string name="Either_Click_on_LATE_NA_or_mention_Husband_Serial_number">Either Click on LATE/NA or mention spouse Serial number</string>
    <string name="Mention_Head_of_the_family_gender">Mention Head of the family gender</string>
    <string name="Head_of_the_family_is_mandatory">Head of the family is mandatory</string>
    <string name="Enter_Valid_Contact_Number">Enter Valid Contact Number</string>
    <string name="Please_enter_Form_Reference_number">Please enter Form/Reference number</string>
    <string name="ERROR_Please_enter_Form_Reference_number">ERROR: Please enter Form/Reference number</string>
    <string name="Logical_Error_Type_1">Logical Error Type 1</string>
    <string name="Logical_Error_Type_2">Logical Error Type 2</string>
    <string name="Logical_Error_Type_3">Logical Error Type 3</string>
    <string name="Logical_Error_Type_4">Logical Error Type 4</string>
    <string name="Logical_Error_Type_5">Logical Error Type 5</string>
    <string name="Logical_Error_Type_6">Logical Error Type 6</string>
    <string name="Logical_Error_Type_7">Logical Error Type 7</string>
    <string name="Logical_Error_Type_8">Logical Error Type 8</string>
    <string name="Logical_Error_Type_9">Logical Error Type 9</string>
    <string name="Logical_Error_Type_10">Logical Error Type 10</string>
    <string name="Logical_Error_Type_11">Logical Error Type 11</string>
    <string name="Logical_Error_Type_12">Logical Error Type 12</string>
    <string name="Logical_Error_Type_13">Logical Error Type 13</string>
    <string name="Logical_Error_Type_14">Logical Error Type 14</string>
    <string name="Logical_Error_Type_15">Logical Error Type 15</string>
    <string name="Logical_Error_Type_16">Logical Error Type 16</string>
    <string name="Home">HOME</string>
    <string name="Submit">Submit</string>
    <string name="Change_Password">Change Password</string>
    <string name="Old_Password">Old Password</string>
    <string name="enter_your_old_password_here">enter your old password here</string>
    <string name="New_Password">New Password</string>
    <string name="enter_new_password">enter new password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="re_enter_your_new_password">re-enter your new password</string>
    <string name="Checklist_Verification">Checklist Verification</string>
    <string name="Submission_to_ERO">Submission to ERO</string>
    <string name="Upload_Form_Image">Upload Form Image</string>
    <string name="Make_sure_you_have_captured_form_image_in_your_mobile_phone">Make sure you have captured form image in your mobile phone.</string>
    <string name="Mention_Form_REFERENCE_no_below">Mention Form REFERENCE no. below.</string>
    <string name="Mention_Form_Type_here">Mention Form Type here...</string>
    <string name="Mention_Voter_Epic_Number">Mention Voter Epic Number...</string>
    <string name="Reported_Death">Reported Death</string>
</resources>