<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mgov.gov.in.blohybrid.ChangePassword"
    tools:showIn="@layout/activity_change_password"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_ref"
            android:adjustViewBounds="true"
            android:src="@drawable/eciheader"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4pt"
        android:paddingRight="4pt">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Change_Password"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:gravity="center"
            android:background="#AAFF9800"
            android:layout_marginTop="4pt"
            android:layout_gravity="center_horizontal" />
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="16pt"
            android:background="#FF9800" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4pt"
        android:paddingRight="4pt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Old_Password"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/password"
            android:id="@+id/etoldpassword"
            android:inputType="textPassword"
            android:hint="@string/enter_your_old_password_here"
            android:maxLength="500" />
        <TextView
            android:id="@+id/tverroroldpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:text=" "
            android:visibility="gone"
            android:textColor="#b30000" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/New_Password"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/password"
            android:id="@+id/etnewpassword"
            android:maxLength="500"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tverrornewpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:text=" "
            android:visibility="gone"
            android:textColor="#b30000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm_Password"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/password"
            android:id="@+id/etconfirmpassword"
            android:maxLength="500"
            android:hint="@string/re_enter_your_new_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tverrorchangepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text=""
            android:visibility="gone"
            android:textColor="#b30000" />


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_submitcp"
        android:layout_gravity="center"
        android:background="@drawable/btn_background"/>

        </LinearLayout>
</ScrollView>

</LinearLayout>