<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mgov.gov.in.blohybrid.DirectSubmission"
    tools:showIn="@layout/activity_direct_submission"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_ref"
            android:adjustViewBounds="true"
            android:src="@drawable/eciheader"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingLeft="5pt"
        android:paddingRight="5pt"
        android:paddingTop="4pt"
        android:text="@string/Home"
        android:textColor="#004d99"
        android:textSize="10pt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4pt"
        android:paddingRight="4pt">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Submission_to_ERO"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:gravity="center"
            android:background="#AAFF9800"
            android:layout_marginTop="2pt"
            android:layout_gravity="center_horizontal" />
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="8pt"
            android:background="#FF9800" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4pt"
        android:paddingRight="4pt">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:id="@+id/ivimage"
        android:src="@drawable/form1"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Upload_Form_Image"
            android:paddingLeft="10pt"
            android:textSize="10pt"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="right"
            android:layout_gravity="right"
            android:layout_marginRight="2pt"
            android:padding="5pt"
            android:id="@+id/tvuploadphoto"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="8pt"
            android:textColor="#084D76"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="3pt"
            android:id="@+id/tvrandamnumber"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="8pt"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="3pt"
            android:text="@string/Make_sure_you_have_captured_form_image_in_your_mobile_phone"
            android:id="@+id/tvnotice"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/Mention_Form_REFERENCE_no_below"
        android:textSize="10pt"
        android:textColor="#084D76"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:paddingLeft="5pt"
            android:paddingRight="5pt"
            android:textStyle="normal"
            android:gravity="bottom"
            android:textSize="8pt"
            android:hint="@string/Mention_Form_Type_here"
            android:id="@+id/etform6"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:paddingLeft="5pt"
            android:paddingRight="5pt"
            android:textStyle="normal"
            android:gravity="bottom"
            android:textSize="8pt"
            android:hint="@string/Mention_Voter_Epic_Number"
            android:id="@+id/etepic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvform6error"
            android:textColor="#FF0000"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:textColor="#fff"
            android:layout_marginTop="15pt"
            android:layout_marginRight="10pt"
            android:id="@+id/btn_submitform6"
            android:layout_gravity="right"
            android:padding="5pt"
            android:background="@drawable/btn_background"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
